<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Better Amino</string>
    <string name="hello_world">Hello World</string>

    <!-- Strings used by dialogs -->
    <string name="warning">Warning!</string>
    <string name="leave_community_description">If you leave this Community, the subscriptions associated with it will stop. Are you sure you want to leave this Community?</string>
    <string name="cancel">Cancel</string>
    <string name="leave">Leave</string>
    <string name="leave_chat_description">Are you sure you want to leave this chat?</string>
    <string name="disclaimer">Disclaimer!</string>
    <string name="invite_disclaimer_message">Inviting the online members may cause you a ban from the community, and if you point the finger at me for messing up your chat, I will laugh at you.</string>
    <string name="disclaimer_message">Your use of the application may cause you to be banned from a community or kicked out, so try not to share images from the application. And if you point the finger at me for kicking you out of your conversation or account or banning you from a community where you have a high level, I will laugh at you.</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>

    <!-- Strings used by MainActivity -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>

    <!-- Strings used by MainBarMenu, NavigationRailMenu -->
    <string name="communities">Communities</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="explore">Explore</string>
    <string name="home">Home</string>
    <string name="guidelines">Guidelines</string>

    <!-- Strings used by ProfileFragment -->
    <string name="set">Set</string>
    <string name="bio">Bio</string>
    <string name="nickname">Nickname</string>
    <string name="logout">Logout</string>

    <!-- Strings used by CommunitiesFragment -->
    <string name="my_communities">My Communities</string>

    <!-- Strings used by DeveloperFragment -->
    <string name="no_projects_title">Requests not found</string>
    <string name="no_projects_suggestion">Create a request by clicking on the button below</string>
    <string name="projects">Requests</string>
    <string name="new_project">New Request</string>
    <string name="delete_project">Delete Request</string>
    <string name="project_name">Request Name</string>
    <string name="project_delete_warning">Do you want to delete %1$s?</string>
    <string name="delete">Delete</string>
    <string name="package_name">Package Name</string>

    <!-- Strings used by CommunityHomeFragment -->
    <string name="blogs">Blogs</string>

    <!-- Strings used by CommunityChatsFragment -->
    <string name="private_chat">Private Chat</string>

    <!-- Strings used by ChatActivity -->
    <string name="message">Message</string>
    <string name="fake_coins">Fake Coins</string>
    <string name="message_type">Message Type</string>
    <string name="invite_online">Invite Online</string>
    <string name="new_messages">New Messages</string>
    <string name="new_messages_title">Go To Message</string>
    <string name="send_coins">Send Coins</string>
    <string name="coins_count">Coins Count</string>
    <string name="coins_sent">Coins Sent Successfully</string>

    <!-- Strings used by SearchCommunityActivity -->
    <string name="search_about_communities">Search About Communities</string>
    <string name="search">Search</string>

    <!-- Strings used by RequestActivity -->
    <string name="developers">Developers</string>
    <string name="send">Send</string>
    <string name="method">Method</string>
    <string name="post">POST</string>
    <string name="path"><![CDATA[/<ndcId>/s/community/join?<uid>]]></string>
    <string name="request">Request</string>
    <string name="response">Response</string>
    <string name="title_activity_request">Request Manager</string>
    <string name="create">Create</string>

    <!-- Strings used in RequestFragment -->
    <string name="data_type">Data Type</string>
    <string name="json">JSON String</string>

    <!-- Strings used in RequestsNetwork -->
    <string name="session_expired">Session is Expired</string>

    <!-- String Arrays -->
    <string-array name="methods">
        <item>POST</item>
        <item>GET</item>
        <item>DELETE</item>
    </string-array>

    <string-array name="data_types">
        <item>JSON</item>
        <item>JSON String</item>
    </string-array>

</resources>
