<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="locale"
    android:padding="?dialogPreferredPadding">

    <com.google.android.material.textview.MaterialTextView
        android:id="@android:id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_project"
        android:textAppearance="?attr/textAppearanceTitleLarge" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/title"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/project_name"
        android:textDirection="locale">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@android:id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:importantForAutofill="no">

            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@android:id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_project_name"
        android:layout_marginTop="14dp"
        android:text="@android:string/cancel" />

    <com.google.android.material.button.MaterialButton
        android:id="@android:id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_project_name"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp"
        android:text="@string/create" />

</RelativeLayout>